--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">sms drawer</string>
+    <string name="app_name">SMS Drawer</string>
     <string name="profile_image">프로필 사진</string>
 </resources>
